--- a/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
+++ b/AI_MUNJANG/Base.lproj/Main_ipad.storyboard
@@ -29,69 +29,93 @@
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WSI-vU-4iB" userLabel="container">
-                                <rect key="frame" x="20" y="220" width="728" height="272.5"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tdq-qp-bRs" userLabel="container">
+                                <rect key="frame" x="0.0" y="0.0" width="768" height="655.5"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rmm-GE-Hxf">
-                                        <rect key="frame" x="20" y="20" width="648" height="232.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <inset key="titleEdgeInsets" minX="8" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                        <state key="normal" title="어떤 문장을 분석해드릴까요? ">
-                                            <color key="titleColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="0.84705882349999995" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="clickedAnalyze:" destination="PRe-oi-4bG" eventType="touchUpInside" id="mGF-hB-VEq"/>
-                                        </connections>
-                                    </button>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="e3w-wp-SIA">
-                                        <rect key="frame" x="676" y="121" width="32" height="30.5"/>
-                                        <color key="tintColor" red="0.015686274510000001" green="0.74901960779999999" blue="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gha-fR-lHT">
+                                        <rect key="frame" x="40" y="100" width="202" height="63"/>
+                                        <attributedString key="attributedText">
+                                            <fragment content="꾸준하게 키워가는  나의 문해력">
+                                                <attributes>
+                                                    <font key="NSFont" size="27" name="NanumSquareOTF_acR"/>
+                                                    <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                </attributes>
+                                            </fragment>
+                                        </attributedString>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home" translatesAutoresizingMaskIntoConstraints="NO" id="eAW-C6-x8X">
+                                        <rect key="frame" x="368" y="100" width="400" height="400"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="32" id="Frz-FN-sFq"/>
-                                            <constraint firstAttribute="height" constant="32" id="JP3-q3-cUc"/>
+                                            <constraint firstAttribute="width" secondItem="eAW-C6-x8X" secondAttribute="height" multiplier="1:1" id="5Vw-Wo-cdp"/>
+                                            <constraint firstAttribute="height" constant="400" id="S5V-I1-aVA"/>
                                         </constraints>
                                     </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="문장 분석하기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SOI-43-5JX">
+                                        <rect key="frame" x="40" y="273" width="108.5" height="21"/>
+                                        <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="19"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vXB-4F-sME">
+                                        <rect key="frame" x="20" y="302" width="648" height="351.5"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="어떤 문장을 분석해드릴까요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-5L-7Zj">
+                                                <rect key="frame" x="40" y="20" width="203" height="19"/>
+                                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="17"/>
+                                                <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.96862745100000003" green="0.97647058819999999" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="vXB-4F-sME" secondAttribute="height" multiplier="59:32" id="GfG-Zs-q4a"/>
+                                            <constraint firstItem="m9s-5L-7Zj" firstAttribute="top" secondItem="vXB-4F-sME" secondAttribute="top" constant="20" id="eyW-8O-SeH"/>
+                                            <constraint firstItem="m9s-5L-7Zj" firstAttribute="leading" secondItem="vXB-4F-sME" secondAttribute="leading" constant="40" id="obQ-l3-fcw"/>
+                                        </constraints>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="e3w-wp-SIA" firstAttribute="leading" secondItem="rmm-GE-Hxf" secondAttribute="trailing" constant="8" id="Pp6-Eo-Z0p"/>
-                                    <constraint firstItem="rmm-GE-Hxf" firstAttribute="top" secondItem="WSI-vU-4iB" secondAttribute="top" constant="20" symbolic="YES" id="RVT-kw-MS3"/>
-                                    <constraint firstAttribute="bottom" secondItem="rmm-GE-Hxf" secondAttribute="bottom" constant="20" symbolic="YES" id="XjE-Kb-IGr"/>
-                                    <constraint firstItem="e3w-wp-SIA" firstAttribute="centerY" secondItem="WSI-vU-4iB" secondAttribute="centerY" id="aKQ-nR-dky"/>
-                                    <constraint firstAttribute="trailing" secondItem="e3w-wp-SIA" secondAttribute="trailing" constant="20" id="cEq-o3-izP"/>
-                                    <constraint firstItem="rmm-GE-Hxf" firstAttribute="leading" secondItem="WSI-vU-4iB" secondAttribute="leading" constant="20" id="p8Y-tq-In7"/>
-                                    <constraint firstAttribute="width" secondItem="WSI-vU-4iB" secondAttribute="height" multiplier="187:70" id="pqg-ep-uGK"/>
+                                    <constraint firstAttribute="trailing" secondItem="vXB-4F-sME" secondAttribute="trailing" constant="100" id="Cb5-TT-JCa"/>
+                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="100" id="KO8-hh-qqp"/>
+                                    <constraint firstItem="Gha-fR-lHT" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="40" id="KgB-O9-UPm"/>
+                                    <constraint firstItem="SOI-43-5JX" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="40" id="TsQ-TQ-Ov4"/>
+                                    <constraint firstItem="vXB-4F-sME" firstAttribute="top" secondItem="SOI-43-5JX" secondAttribute="bottom" constant="8" symbolic="YES" id="UQO-w7-CKr"/>
+                                    <constraint firstItem="vXB-4F-sME" firstAttribute="leading" secondItem="Tdq-qp-bRs" secondAttribute="leading" constant="20" symbolic="YES" id="ZQs-Jg-1Wj"/>
+                                    <constraint firstItem="eAW-C6-x8X" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="top" constant="100" id="qbG-zr-MY2"/>
+                                    <constraint firstItem="SOI-43-5JX" firstAttribute="top" secondItem="Gha-fR-lHT" secondAttribute="bottom" constant="110" id="wZr-vo-cqD"/>
+                                    <constraint firstAttribute="trailing" secondItem="eAW-C6-x8X" secondAttribute="trailing" id="zhE-0C-h54"/>
                                 </constraints>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xfr-Qj-KuW">
-                                <rect key="frame" x="20" y="542.5" width="728" height="26"/>
-                                <fontDescription key="fontDescription" name="NanumSquareR" family="NanumSquare" pointSize="12"/>
-                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                <state key="normal" title="문장 학습 하러 가기">
-                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="clickedContents:" destination="PRe-oi-4bG" eventType="touchUpInside" id="g4K-d3-sk7"/>
-                                </connections>
-                            </button>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="home_sen" translatesAutoresizingMaskIntoConstraints="NO" id="AdD-ez-nBD">
+                                <rect key="frame" x="50" y="735.5" width="668" height="200"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="kpD-au-aOL"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="oNx-sS-kdf"/>
                         <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="xfr-Qj-KuW" firstAttribute="top" secondItem="WSI-vU-4iB" secondAttribute="bottom" constant="50" id="6CG-fB-kTy"/>
-                            <constraint firstItem="WSI-vU-4iB" firstAttribute="top" secondItem="oNx-sS-kdf" secondAttribute="top" constant="150" id="7RD-r5-JyS"/>
-                            <constraint firstItem="WSI-vU-4iB" firstAttribute="leading" secondItem="oNx-sS-kdf" secondAttribute="leading" constant="20" id="CUm-Td-dDP"/>
-                            <constraint firstItem="xfr-Qj-KuW" firstAttribute="leading" secondItem="oNx-sS-kdf" secondAttribute="leading" constant="20" id="IaE-IQ-npi"/>
-                            <constraint firstItem="oNx-sS-kdf" firstAttribute="trailing" secondItem="WSI-vU-4iB" secondAttribute="trailing" constant="20" id="vAU-MI-J8p"/>
-                            <constraint firstItem="oNx-sS-kdf" firstAttribute="trailing" secondItem="xfr-Qj-KuW" secondAttribute="trailing" constant="20" id="wp3-x2-vqj"/>
+                            <constraint firstItem="oNx-sS-kdf" firstAttribute="trailing" secondItem="Tdq-qp-bRs" secondAttribute="trailing" id="C4n-vl-XUH"/>
+                            <constraint firstItem="Tdq-qp-bRs" firstAttribute="height" secondItem="ozZ-dG-Weg" secondAttribute="height" multiplier="0.64" id="UVc-4G-vFu"/>
+                            <constraint firstItem="AdD-ez-nBD" firstAttribute="centerX" secondItem="ozZ-dG-Weg" secondAttribute="centerX" id="bUM-ib-oX2"/>
+                            <constraint firstItem="AdD-ez-nBD" firstAttribute="leading" secondItem="oNx-sS-kdf" secondAttribute="leading" constant="50" id="bwx-fW-7rC"/>
+                            <constraint firstItem="oNx-sS-kdf" firstAttribute="trailing" secondItem="AdD-ez-nBD" secondAttribute="trailing" constant="50" id="dTd-92-CBF"/>
+                            <constraint firstItem="Tdq-qp-bRs" firstAttribute="leading" secondItem="oNx-sS-kdf" secondAttribute="leading" id="qYO-qU-QEE"/>
+                            <constraint firstItem="Tdq-qp-bRs" firstAttribute="top" secondItem="ozZ-dG-Weg" secondAttribute="top" id="uWq-bI-Auu"/>
+                            <constraint firstItem="AdD-ez-nBD" firstAttribute="top" secondItem="Tdq-qp-bRs" secondAttribute="bottom" constant="80" id="yfU-le-dJS"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="Jdi-7z-ZlO"/>
                     <connections>
-                        <outlet property="containerView" destination="WSI-vU-4iB" id="LaU-3t-Ruw"/>
-                        <outlet property="labelContents" destination="xfr-Qj-KuW" id="dif-r3-n80"/>
-                        <outlet property="searchImage" destination="e3w-wp-SIA" id="bC0-qo-lSi"/>
+                        <outlet property="bottomTitleContainerView" destination="vXB-4F-sME" id="UTl-dz-JRR"/>
+                        <outlet property="bottomTitleLabel" destination="m9s-5L-7Zj" id="7RV-N1-ass"/>
+                        <outlet property="containerView" destination="vXB-4F-sME" id="MAP-II-eaG"/>
+                        <outlet property="homeSenImageView" destination="AdD-ez-nBD" id="FPc-tm-ywW"/>
+                        <outlet property="middleTitleLabel" destination="SOI-43-5JX" id="VM4-Kn-IbR"/>
+                        <outlet property="topTitleLabel" destination="Gha-fR-lHT" id="kDW-tN-2hw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3zZ-Cs-smL" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -3072,7 +3096,7 @@
                             </connections>
                         </button>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="홍길동님은 총 50000개의 하트를 모았어요!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PJu-ah-Jcb">
-                            <rect key="frame" x="0.0" y="647" width="414" height="13.333333333333371"/>
+                            <rect key="frame" x="0.0" y="647" width="414" height="14"/>
                             <fontDescription key="fontDescription" name="NanumSquareB" family="NanumSquare" pointSize="12"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -4999,6 +5023,8 @@
     <resources>
         <image name="edit" width="32" height="32"/>
         <image name="group2" width="183" height="44"/>
+        <image name="home" width="269" height="233"/>
+        <image name="home_sen" width="350" height="124"/>
         <image name="house" catalog="system" width="128" height="104"/>
         <image name="icArrowLeft32Px" width="32" height="32"/>
         <image name="icClose32Px" width="34" height="34"/>
@@ -5016,7 +5042,6 @@
         <image name="illustHeart" width="390" height="264"/>
         <image name="image_default" width="350" height="350"/>
         <image name="logoImg" width="652" height="692"/>
-        <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="phone.fill.connection" catalog="system" width="128" height="123"/>
         <image name="sample" width="594" height="352"/>
         <image name="speaker" catalog="system" width="128" height="123"/>
